# stm32f4discovery

./: CMakeLists.txt  README.md  lib-files-freertos.txt  lib-files-stm32f4discovery.txt  lib-files-stm32f4xx.txt
examples/: accelerometer_test.c  blink_leds.c  console_test.c
inc/: accelerometer.h  console.h
lib/freertos/FreeRTOS/Demo/CORTEX_M4F_STM32F407ZG-SK/: FreeRTOSConfig.h
src/: accelerometer.c  console.c  delay.c
